ui: fix layout shifting in users_db table

--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,9 @@ form {
     margin-bottom: -1.3rem;
 }
 
+table {
+    table-layout: fixed;
+}
 
 /* =================================================
    NAVBAR
